@@ -90,14 +90,8 @@ class ConsumerModuleTest {
 
         String edcOfferId = "edcOfferId";
         String counterPartyAddress = "counterPartyAddress";
-        String providerId = "someDid";
 
         // let the EDC provide the test data catalog
-        DcatDataset mockDatasetWrongOne = new DcatDataset(); // an offer in the EDC Catalog which the user does not look for
-        mockDatasetWrongOne.setAssetId("assetIdWhichTheUserDoesNotLookFor");
-        mockDatasetWrongOne.setName("wrong");
-        mockDatasetWrongOne.setContenttype("wrong");
-        mockDatasetWrongOne.setDescription("wrong");
         DcatDataset mockDatasetCorrectOne = new DcatDataset(); // the offer in the EDC Catalog which the user looks for
         mockDatasetCorrectOne.setAssetId(edcOfferId);
         mockDatasetCorrectOne.setName("correctName");
@@ -107,7 +101,7 @@ class ConsumerModuleTest {
         policy.setId("policyId");
         mockDatasetCorrectOne.setHasPolicy(List.of(policy));
         DcatCatalog edcCatalogAnswerMock = new DcatCatalog();
-        edcCatalogAnswerMock.setDataset(List.of(mockDatasetWrongOne, mockDatasetCorrectOne));
+        edcCatalogAnswerMock.setDataset(List.of(mockDatasetCorrectOne));
         Mockito.when(edcClientMock.queryCatalog(any())).thenReturn(edcCatalogAnswerMock);
 
         // define EDC client behaviour for the data transfer so that it goes through
@@ -145,14 +139,8 @@ class ConsumerModuleTest {
 
         String edcOfferId = "edcOfferId";
         String counterPartyAddress = "counterPartyAddress";
-        String providerId = "someDid";
 
         // let the EDC provide the test data catalog
-        DcatDataset mockDatasetWrongOne = new DcatDataset(); // an offer in the EDC Catalog which the user does not look for
-        mockDatasetWrongOne.setAssetId("assetIdWhichTheUserDoesNotLookFor");
-        mockDatasetWrongOne.setName("wrong");
-        mockDatasetWrongOne.setContenttype("wrong");
-        mockDatasetWrongOne.setDescription("wrong");
         DcatDataset mockDatasetCorrectOne = new DcatDataset(); // the offer in the EDC Catalog which the user looks for
         mockDatasetCorrectOne.setAssetId(edcOfferId);
         mockDatasetCorrectOne.setName("correctName");
@@ -162,7 +150,7 @@ class ConsumerModuleTest {
         policy.setId("policyId");
         mockDatasetCorrectOne.setHasPolicy(List.of(policy));
         DcatCatalog edcCatalogAnswerMock = new DcatCatalog();
-        edcCatalogAnswerMock.setDataset(List.of(mockDatasetWrongOne, mockDatasetCorrectOne));
+        edcCatalogAnswerMock.setDataset(List.of(mockDatasetCorrectOne));
         Mockito.when(edcClientMock.queryCatalog(any())).thenReturn(edcCatalogAnswerMock);
 
         // define EDC client behaviour for the data transfer so that it goes through
@@ -197,22 +185,22 @@ class ConsumerModuleTest {
 
         reset(edcClientMock);
         reset(technicalFhCatalogClientMock);
+        reset(sparqlFhCatalogClientMock);
 
         // let the FH catalog provide the test data offer
         String fhCatalogOfferContent = TestUtils.loadTextFile(TEST_FILES_PATH + "validFhOffer.json");
         Mockito.when(technicalFhCatalogClientMock.getFhCatalogOfferWithData(ConsumerServiceFake.VALID_FH_OFFER_ID))
             .thenReturn(fhCatalogOfferContent);
 
+        // let the FH catalog provide the test participant details
+        String sparqlQueryResultString = TestUtils.loadTextFile(TEST_FILES_PATH + "validSparqlResultParticipant.json");
+        Mockito.when(sparqlFhCatalogClientMock.queryCatalog(any(), any())).thenReturn(sparqlQueryResultString);
+
         String expectedEdcProviderUrl = "EXPECTED_PROVIDER_URL_VALUE"; // from the "px:providerURL" attribute in the test data offer
         String expectedAssetId = "EXPECTED_ASSET_ID_VALUE"; // from the "px:assetId" attribute in the test data offer
+        String expectedProviderId = "did:web:portal.dev.possible-x.de:participant:df15587a-0760-32b5-9c42-bb7be66e8076";
 
         // let the EDC provide the test data catalog
-        DcatDataset mockDatasetWrongOne = new DcatDataset(); // an offer in the EDC Catalog which the user does not look for
-        mockDatasetWrongOne.setAssetId("assetIdWhichTheUserDoesNotLookFor");
-        mockDatasetWrongOne.setName("wrong");
-        mockDatasetWrongOne.setContenttype("wrong");
-        mockDatasetWrongOne.setDescription("wrong");
-        mockDatasetWrongOne.setHasPolicy(Collections.emptyList());
         DcatDataset mockDatasetCorrectOne = new DcatDataset(); // the offer in the EDC Catalog which the user looks for
         mockDatasetCorrectOne.setAssetId(expectedAssetId);
         mockDatasetCorrectOne.setName("correctName");
@@ -220,7 +208,7 @@ class ConsumerModuleTest {
         mockDatasetCorrectOne.setDescription("correctDescription");
         mockDatasetCorrectOne.setHasPolicy(Collections.emptyList());
         DcatCatalog edcCatalogAnswerMock = new DcatCatalog();
-        edcCatalogAnswerMock.setDataset(List.of(mockDatasetWrongOne, mockDatasetCorrectOne));
+        edcCatalogAnswerMock.setDataset(List.of(mockDatasetCorrectOne));
         Mockito.when(edcClientMock.queryCatalog(Mockito.any())).thenReturn(edcCatalogAnswerMock);
 
         // WHEN/THEN
@@ -230,12 +218,19 @@ class ConsumerModuleTest {
                 .contentType(MediaType.APPLICATION_JSON)).andDo(print()).andExpect(status().isOk())
             .andExpect(jsonPath("$.catalogOffering['px:providerUrl']").value(expectedEdcProviderUrl))
             .andExpect(jsonPath("$.edcOfferId").value(expectedAssetId))
-            .andExpect(jsonPath("$.dataOffering").value(true));
+            .andExpect(jsonPath("$.dataOffering").value(true))
+            .andExpect(jsonPath("$.providerDetails").exists())
+            .andExpect(jsonPath("$.providerDetails.participantId").value(expectedProviderId))
+            .andExpect(jsonPath("$.providerDetails.participantName").value("EXPECTED_NAME_VALUE"))
+            .andExpect(jsonPath("$.providerDetails.participantEmail").value("EXPECTED_MAIL_ADDRESS_VALUE"))
+            .andExpect(jsonPath("$.participantNames.size()").value(1))
+            .andExpect(jsonPath("$.offerRetrievalDate").exists());
 
         // THEN
 
         // FH Catalog should have been queried with the offer ID given in the request
-        verify(technicalFhCatalogClientMock, Mockito.times(1)).getFhCatalogOfferWithData(ConsumerServiceFake.VALID_FH_OFFER_ID);
+        verify(technicalFhCatalogClientMock, Mockito.times(1)).getFhCatalogOfferWithData(
+            ConsumerServiceFake.VALID_FH_OFFER_ID);
     }
 
     @Test
@@ -245,27 +240,28 @@ class ConsumerModuleTest {
 
         reset(edcClientMock);
         reset(technicalFhCatalogClientMock);
+        reset(sparqlFhCatalogClientMock);
 
         // FH catalog does not find offer with data
         WebClientResponseException offerNotFoundEx = Mockito.mock(WebClientResponseException.class);
         Mockito.when(offerNotFoundEx.getStatusCode()).thenReturn(HttpStatusCode.valueOf(404));
         Mockito.when(technicalFhCatalogClientMock.getFhCatalogOfferWithData(ConsumerServiceFake.VALID_FH_OFFER_ID))
                 .thenThrow(offerNotFoundEx);
+
         // let the FH catalog provide the test offer without data
         String fhCatalogOfferContent = TestUtils.loadTextFile(TEST_FILES_PATH + "validFhOfferWithoutData.json");
         Mockito.when(technicalFhCatalogClientMock.getFhCatalogOffer(ConsumerServiceFake.VALID_FH_OFFER_ID))
                 .thenReturn(fhCatalogOfferContent);
 
+        // let the FH catalog provide the test participant details
+        String sparqlQueryResultString = TestUtils.loadTextFile(TEST_FILES_PATH + "validSparqlResultParticipant.json");
+        Mockito.when(sparqlFhCatalogClientMock.queryCatalog(any(), any())).thenReturn(sparqlQueryResultString);
+
         String expectedEdcProviderUrl = "EXPECTED_PROVIDER_URL_VALUE"; // from the "px:providerURL" attribute in the test data offer
         String expectedAssetId = "EXPECTED_ASSET_ID_VALUE"; // from the "px:assetId" attribute in the test data offer
+        String expectedProviderId = "did:web:portal.dev.possible-x.de:participant:df15587a-0760-32b5-9c42-bb7be66e8076";
 
         // let the EDC provide the test data catalog
-        DcatDataset mockDatasetWrongOne = new DcatDataset(); // an offer in the EDC Catalog which the user does not look for
-        mockDatasetWrongOne.setAssetId("assetIdWhichTheUserDoesNotLookFor");
-        mockDatasetWrongOne.setName("wrong");
-        mockDatasetWrongOne.setContenttype("wrong");
-        mockDatasetWrongOne.setDescription("wrong");
-        mockDatasetWrongOne.setHasPolicy(Collections.emptyList());
         DcatDataset mockDatasetCorrectOne = new DcatDataset(); // the offer in the EDC Catalog which the user looks for
         mockDatasetCorrectOne.setAssetId(expectedAssetId);
         mockDatasetCorrectOne.setName("correctName");
@@ -273,22 +269,29 @@ class ConsumerModuleTest {
         mockDatasetCorrectOne.setDescription("correctDescription");
         mockDatasetCorrectOne.setHasPolicy(Collections.emptyList());
         DcatCatalog edcCatalogAnswerMock = new DcatCatalog();
-        edcCatalogAnswerMock.setDataset(List.of(mockDatasetWrongOne, mockDatasetCorrectOne));
+        edcCatalogAnswerMock.setDataset(List.of(mockDatasetCorrectOne));
         Mockito.when(edcClientMock.queryCatalog(any())).thenReturn(edcCatalogAnswerMock);
 
         // WHEN/THEN
 
         this.mockMvc.perform(post("/consumer/offer/select").content(RestApiHelper.asJsonString(
-                                SelectOfferRequestTO.builder().fhCatalogOfferId(ConsumerServiceFake.VALID_FH_OFFER_ID).build()))
-                        .contentType(MediaType.APPLICATION_JSON)).andDo(print()).andExpect(status().isOk())
-                .andExpect(jsonPath("$.catalogOffering['px:providerUrl']").value(expectedEdcProviderUrl))
-                .andExpect(jsonPath("$.edcOfferId").value(expectedAssetId))
-                .andExpect(jsonPath("$.dataOffering").value(false));
+                    SelectOfferRequestTO.builder().fhCatalogOfferId(ConsumerServiceFake.VALID_FH_OFFER_ID).build()))
+                .contentType(MediaType.APPLICATION_JSON)).andDo(print()).andExpect(status().isOk())
+            .andExpect(jsonPath("$.catalogOffering['px:providerUrl']").value(expectedEdcProviderUrl))
+            .andExpect(jsonPath("$.edcOfferId").value(expectedAssetId))
+            .andExpect(jsonPath("$.dataOffering").value(false))
+            .andExpect(jsonPath("$.providerDetails").exists())
+            .andExpect(jsonPath("$.providerDetails.participantId").value(expectedProviderId))
+            .andExpect(jsonPath("$.providerDetails.participantName").value("EXPECTED_NAME_VALUE"))
+            .andExpect(jsonPath("$.providerDetails.participantEmail").value("EXPECTED_MAIL_ADDRESS_VALUE"))
+            .andExpect(jsonPath("$.participantNames.size()").value(1))
+            .andExpect(jsonPath("$.offerRetrievalDate").exists());
 
         // THEN
 
         // FH Catalog should have been queried with the offer ID given in the request
-        verify(technicalFhCatalogClientMock, Mockito.times(1)).getFhCatalogOfferWithData(ConsumerServiceFake.VALID_FH_OFFER_ID);
+        verify(technicalFhCatalogClientMock, Mockito.times(1)).getFhCatalogOfferWithData(
+            ConsumerServiceFake.VALID_FH_OFFER_ID);
         verify(technicalFhCatalogClientMock, Mockito.times(1)).getFhCatalogOffer(ConsumerServiceFake.VALID_FH_OFFER_ID);
     }
 
@@ -306,13 +309,8 @@ class ConsumerModuleTest {
             .thenReturn(fhCatalogOfferContent);
 
         // let the EDC provide the test data catalog which does not contain the offer from the user
-        DcatDataset mockDatasetWrongOne = new DcatDataset(); // an offer in the EDC Catalog which the user does not look for
-        mockDatasetWrongOne.setAssetId("assetIdWhichTheUserDoesNotLookFor");
-        mockDatasetWrongOne.setName("wrong");
-        mockDatasetWrongOne.setContenttype("wrong");
-        mockDatasetWrongOne.setDescription("wrong");
         DcatCatalog edcCatalogAnswerMock = new DcatCatalog();
-        edcCatalogAnswerMock.setDataset(List.of(mockDatasetWrongOne));
+        edcCatalogAnswerMock.setDataset(Collections.emptyList());
         Mockito.when(edcClientMock.queryCatalog(any())).thenReturn(edcCatalogAnswerMock);
 
         // WHEN/THEN
@@ -415,6 +413,12 @@ class ConsumerModuleTest {
         public SparqlFhCatalogClient sparqlFhCatalogClient() {
 
             return Mockito.mock(SparqlFhCatalogClient.class);
+        }
+
+        @Bean
+        public ConsumerServiceMapper consumerServiceMapper() {
+
+            return Mappers.getMapper(ConsumerServiceMapper.class);
         }
     }
 
